# Sudoku

./: .gitignore  README.md  TODO  TODO.md  bootstrap.sh  log  pyproject.toml
sudoku/: __init__.py  api.py  auth.py  db.py  main.py  play.py  room.py  schema.sql
sudoku/static/: manifest.json  play.js  style.css
sudoku/templates/: base.html
sudoku/templates/auth/: login.html  register.html
sudoku/templates/main/: index.html  play.html
sudoku/templates/room/: create.html  join.html  show.html
